--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -759,6 +759,7 @@ pre code {
   }
 }
 .container-fluid {
+  margin-top: 50px;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
