--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -62,6 +62,7 @@ section {
 }
 nav.menu {
     position: fixed;
+    margin-top: 2px;
     z-index: 20;
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
