--- a/views/layout.html
+++ b/views/layout.html
@@ -270,11 +270,11 @@
             </div>
         </div>
     </nav>
-
+    
+    <div class="container-fluid">
     <div id="wrapper">
-        <div class="container-fluid">
         <!-- BARRA DE NAVEGACION=========================================-->
-            <nav class="navbar navbar-default" role="navigation">
+            <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
                 <!-- El logotipo y el icono que despliega el menú se agrupan
                    para mostrarlos mejor en los dispositivos móviles -->
                 <div class="navbar-header">        
