--- a/views/default/index4.html
+++ b/views/default/index4.html
@@ -1,13 +1,28 @@
-{{#extend 'layout.html'}}
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>{{=response.title or request.application}}</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width">
 
-<!-- CSS -->
-<link rel="stylesheet" href="{{=URL('static', 'css/jquery.steps.css')}}">
-<link rel="stylesheet" href="{{=URL('static', 'css/bootstrap.min.css')}}">
+        <!-- CSS -->
+        <link rel="stylesheet" href="{{=URL('static', 'css/jquery.steps.css')}}">
+        <link rel="stylesheet" href="{{=URL('static', 'css/bootstrap.css')}}">
+        <link rel="stylesheet" href="{{=URL('static', 'css/web2py.css')}}">
 
-<!-- JS -->
-<script src="{{=URL('static', 'js/jquery.js')}}"></script>
-<script src="{{=URL('static', 'js/bootstrap.min.js')}}"></script>
-<script src="{{=URL('static', 'js/jquery.steps.js')}}"></script>
+        <!-- JS -->
+        <script src="{{=URL('static', 'js/jquery.js')}}"></script>
+        <script src="{{=URL('static', 'js/bootstrap.min.js')}}"></script>
+        <script src="{{=URL('static', 'js/jquery.steps.js')}}"></script>
+        <script src="{{=URL('static', 'js/web2py.js')}}"></script>
+        <script src="{{=URL('static', 'js/misc.js')}}"></script>
+    </head>
+<body>
 
 <div class='container'>
 
@@ -168,6 +183,9 @@
 </form>
 </div>
 
+</body>
+</html>
+
 <script>
 
 function cargarLocalidades() {
@@ -298,4 +316,3 @@ div.tab-content { overflow: visible; }
     border: 1px solid #0000FB;
 }
 </style>
-
