--- a/views/layout.html
+++ b/views/layout.html
@@ -71,6 +71,10 @@
        uncomment to load jquery-ui //-->
   {{block head}}
   {{end}}
+  
+  <!-- se agrega para hacer editables los GRID -->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="{{=URL('static','js/jeditable/jquery.jeditable.js')}}"></script>
 </head>
 
 <body>
