Añadido smartgrid en la sección de permisos

--- a/views/default/index3.html
+++ b/views/default/index3.html
@@ -25,8 +25,7 @@
 <body>
 
 <div class='container'>
-
-<h1>Configuración Inicial <span>Sucursal</span></h1>
+<h1>Sucursal<br> <small>Configuración inicial</small></h1>
 
 <form name='sucursal' action='' id='sucursal' method='post'>
 {{form.custom.begin}}
