--- a/views/default/index4.html
+++ b/views/default/index4.html
@@ -25,8 +25,7 @@
 <body>
 
 <div class='container'>
-
-<h1>Configuración Inicial <span>Departamento y Administrador</span></h1>
+<h1>Departamento<br> <small>Configuración inicial</small></h1>
 
 <form name='departamento' action='' id='departamento' method='post'>
 {{form.custom.begin}}
