--- a/views/default/index2.html
+++ b/views/default/index2.html
@@ -25,7 +25,7 @@
 <body>
 
 <div class='container'>
-<h1>Configuración Inicial <span>Empresa</span></h1>
+<h1>Empresa<br> <small>Configuración inicial</small></h1>
 
 <div class='flash'></div>
 
