--- a/static/css/web2py.css
+++ b/static/css/web2py.css
@@ -10,12 +10,12 @@ h3 {font-size:2.00em}
 h4 {font-size:1.50em}
 h5 {font-size:1.25em}
 h6 {font-size:1.12em}
-th,label {font-weight:bold; white-space:nowrap;}
-td,th {text-align:left; padding:2px 5px 2px 5px}
+/*th,label {font-weight:bold; white-space:nowrap;}*/
+/*td,th {text-align:left; padding:2px 5px 2px 5px}*/
 /*th {vertical-align:middle; border-right:1px solid white}*/
 td {vertical-align:top}
 form table tr td label {text-align:left}
-p,table,ol,ul {padding:0; margin: 0.75em 0}
+/*p,table,ol,ul {padding:0; margin: 0.75em 0}*/
 p {text-align:justify}
 ol, ul {list-style-position:outside; margin-left:2em}
 li {margin-bottom:0.5em}
@@ -232,20 +232,21 @@ div.error {
 /* .web2py_table {border:1px solid #ccc} */
 .web2py_paginator {}
 .web2py_grid {width:100%}
-.web2py_grid table {width:100%}
+/*.web2py_grid table {width:100%}*/
 .web2py_grid tbody td {padding:2px 5px 2px 5px; vertical-align: middle;}
 .web2py_grid .web2py_form td {vertical-align: top;}
 
 .web2py_grid thead{
     background-color:#F5F5F5;
-    }
+}
+
 .web2py_grid thead th,.web2py_grid tfoot td {
     padding:5px 5px 5px 5px;
 }
 
 .web2py_grid tr.odd {background-color:#F9F9F9}
 .web2py_grid tr:hover {background-color:#F5F5F5}
-
+*/
 /*
 .web2py_breadcrumbs a {
     line-height:20px; margin-right:5px; display:inline-block;
@@ -307,6 +308,7 @@ div.error {
     width:35%;
     float:right;
     text-align:right;
+    color: #777;
 }
 
 /*Fix firefox problem*/
