--- a/static/css/web2py.css
+++ b/static/css/web2py.css
@@ -1,5 +1,5 @@
 /** these MUST stay **/
-a {text-decoration:none; white-space:nowrap}
+/*a {text-decoration:none; white-space:nowrap}
 a:hover {text-decoration:underline}
 a.button {text-decoration:none}
 h1,h2,h3,h4,h5,h6 {margin:0.5em 0 0.25em 0; display:block;
@@ -12,10 +12,10 @@ h5 {font-size:1.25em}
 h6 {font-size:1.12em}
 /*th,label {font-weight:bold; white-space:nowrap;}*/
 /*td,th {text-align:left; padding:2px 5px 2px 5px}*/
-/*th {vertical-align:middle; border-right:1px solid white}*/
+/*th {vertical-align:middle; border-right:1px solid white}
 td {vertical-align:top}
 form table tr td label {text-align:left}
-/*p,table,ol,ul {padding:0; margin: 0.75em 0}*/
+/*p,table,ol,ul {padding:0; margin: 0.75em 0}
 p {text-align:justify}
 ol, ul {list-style-position:outside; margin-left:2em}
 li {margin-bottom:0.5em}
@@ -36,7 +36,7 @@ audio {width:200px}
 .hidden {display:none;visibility:visible}
 .right {float:right; text-align:right}
 .left {float:left; text-align:left}
-.center {width:100; text-align:center; vertical-align:middle}
+.center {width:100; text-align:center; vertical-align:middle}*/
 /** end **/
 
 /* Sticky footer begin */
@@ -79,9 +79,16 @@ td.w2p_fl, td.w2p_fw {padding-right:7px}
 td.w2p_fl,td.w2p_fc {padding-top:4px}
 div.w2p_export_menu {
     margin:5px 0;
-     background-color:#F5F5F5;
+    background-color:#F5F5F5;
 }
-div.w2p_export_menu a, div.w2p_wiki_tags a, div.w2p_cloud a {margin-left:5px; padding:2px 5px; border-radius:5px; -moz-border-radius:5px; -webkit-border-radius:5px;}
+div.w2p_export_menu a, div.w2p_wiki_tags a, div.w2p_cloud a {
+    text-decoration: none;
+    margin-left:5px; 
+    padding:2px 5px; 
+    border-radius:5px; 
+    -moz-border-radius:5px; 
+    -webkit-border-radius:5px;
+}
 
 /* tr#submit_record__row {border-top:1px solid #E5E5E5} */
 #submit_record__row td {padding-top:.5em}
@@ -317,7 +324,7 @@ div.error {
 .web2py_paginator {
     padding:5px;
     text-align:right;
-    background-color:#f2f2f2;
+    background-color:#F5F5F5;
 
 }
 .web2py_paginator ul {
@@ -329,7 +336,22 @@ div.error {
 .web2py_paginator ul li {
     display:inline;
 }
-
+.web2py_paginator ul li a{
+    position: relative;
+    padding: 6px 12px;
+    margin-left: -1px;
+    line-height: 1.42857143;
+    color: #777;
+    text-decoration: none;
+    /*background-color: #fff;*/
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+.web2py_paginator ul li a:hover{
+    color: #2a6496;
+    background-color: #eee;
+    border-color: #ddd;
+}
 .web2py_paginator .current {
     font-weight:bold;
 }
