--- a/views/layout.html
+++ b/views/layout.html
@@ -308,13 +308,21 @@
                         <li><a href="#">Ayuda</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                Sesión <b class="caret"></b>
+                                 {{if auth.is_logged_in():
+                                        =auth.user['first_name']
+                                    else:
+                                        ='Sesión'
+                                    pass}}<b class="caret"></b>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Ver perfíl</a></li>
-                                <li><a href="{{=URL('default','user')}}">Iniciar sesión</a></li>
+                                <li><a href="#"><span class="glyphicon glyphicon-eye-open"></span> Ver perfíl</a></li>
                                 <li class="divider"></li>
-                                <li><a href="#">Cerrar sesión</a></li>
+                                {{if auth.is_logged_in():}}
+                                    <li><a href="{{=URL('default','user/logout')}}"><span class="glyphicon glyphicon-off"></span> Cerrar sesión</a></li>
+                                {{else:}}
+                                    <li><a href="{{=URL('default','user')}}"><span class="glyphicon glyphicon-off"></span> Iniciar sesión</a></li>
+                                {{pass}}
+                                
                             </ul>
                         </li>
                     </ul>
@@ -361,12 +369,6 @@
     });</script>
     {{pass}}
     <script src="{{=URL('static','js/share.js',vars=dict(static=URL('static','images')))}}"></script>
-   <script type="text/javascript">
-        $(document).ready(function(){
-            setTimeout(function() {
-                $(".flash").fadeOut(1000);
-            },3000);
-        });
-   </script>
+   
 </body>
 </html>
