csv cc_cuentas actualizado

--- a/views/poliza/listar.html
+++ b/views/poliza/listar.html
@@ -27,8 +27,11 @@ jQuery(document).ready(function(){
 
 <h1>Pólizas Contables</h1>
 
-
-  <p>{{=session.msgContabiliza}}</p>
+{{if session.msgContabiliza:}}
+  <div class="flash flash-info">
+      {{= session.msgContabiliza}}
+ </div>
+{{pass}}
 
 
 {{=polizas}}
