--- a/views/poliza/listar.html
+++ b/views/poliza/listar.html
@@ -1,50 +1,40 @@
 {{extend 'layout.html'}}
-<script src="//code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
-<link rel="stylesheet" href="//code.jquery.com/ui/1.11.0/themes/smoothness/jquery-ui.css">
+<!--script src="//code.jquery.com/ui/1.11.0/jquery-ui.js"></script-->
+<!--link rel="stylesheet" href="//code.jquery.com/ui/1.11.0/themes/smoothness/jquery-ui.css"-->
+
+<script src="{{=URL('static','js/chosen.js')}}"></script>
+<link rel="stylesheet" href="{{=URL('static','css/chosen.css')}}">
 
 <script>
 jQuery(document).ready(function(){
 
-    jQuery('.f_asiento').editable(
-    "{{=URL('poliza', 'actualiza_asiento')}}",
+    jQuery('.f_asiento').editable("{{=URL('poliza', 'actualiza_asiento')}}",
     {
         tooltip: "Click para editar, ENTER para salvar.",
         indicator : "Actualizando...",
     });
 
-    $.getJSON('{{=URL("carga_cc")}}', function(json) {
-
-        var dataArray = [];
-        $.each(json, function (index, value) {
-            dataArray.push(value['descripcion']);
-        });
-
-        $('.cc_empresa_id').editable("{{=URL('poliza', 'actualiza_asiento2')}}", {
-            tooltip: 'Click para editar, ENTER para salvar.',
-            indicator: 'Actualizando...'
-        }).click(function() {
-            $(this).find('input').autocomplete({
-                source: dataArray
-            });
-        });
+    $('.cc_empresa_id').editable("{{=URL('poliza', 'actualiza_descripcion')}}",{
+        tooltip: 'Click para editar, ENTER para salvar.',
+        indicator: 'Actualizando...',
+        type: 'select',
+        cancel: "Cancelar",
+        onblur: 'ignore',
+        style: 'inherit',
+        loadurl: "{{=URL('poliza', 'carga_cc')}}",
+    }).click(function() {
+        $(this).find('select').chosen();
     });
 
-    /*
-    jQuery('.cc_empresa_id').editable("{{=URL('poliza', 'actualiza_asiento')}}",{                   
+    jQuery('.concepto_asiento').editable("{{=URL('poliza', 'actualiza_asiento')}}",{
                              tooltip: "Click para editar, ENTER para salvar.",
                              indicator : "Actualizando...",
     });
-    */
-
-    jQuery('.concepto_asiento').editable("{{=URL('poliza', 'actualiza_asiento')}}",{                   
+    jQuery('.debe').editable("{{=URL('poliza', 'actualiza_asiento')}}",{
                              tooltip: "Click para editar, ENTER para salvar.",
                              indicator : "Actualizando...",
     });
-    jQuery('.debe').editable("{{=URL('poliza', 'actualiza_asiento')}}",{                   
-                             tooltip: "Click para editar, ENTER para salvar.",
-                             indicator : "Actualizando...",
-    });
-    jQuery('.haber').editable("{{=URL('poliza', 'actualiza_asiento')}}",{                   
+    jQuery('.haber').editable("{{=URL('poliza', 'actualiza_asiento')}}",{
                              tooltip: "Click para editar, ENTER para salvar.",
                              indicator : "Actualizando...",
     });
