--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -215,7 +215,7 @@ th {
   }
   thead {
     display: table-header-group;
-    
+
   }
   tr,
   img {
@@ -1439,7 +1439,7 @@ pre code {
   }
 }
 th {
-  text-align: left;  
+  text-align: left;
 }
 th a{
   color: #777;
@@ -1460,6 +1460,7 @@ table > tfoot > tr > td {
   line-height: 1.42857143;
   vertical-align: top;
   border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
 }
 table > thead > tr > th {
   vertical-align: bottom;
@@ -1479,6 +1480,10 @@ table > tbody + tbody {
 table table {
   background-color: #fff;
 }
+.table tbody{
+  border-left: 1px solid #ddd;
+}
+
 .table-condensed > thead > tr > th,
 .table-condensed > tbody > tr > th,
 .table-condensed > tfoot > tr > th,
@@ -4662,7 +4667,7 @@ a.thumbnail.active {
   margin-right: 5px;
 }
 a.list-group-item {
-  color: #555;
+  color: #2A6496;
 }
 a.list-group-item .list-group-item-heading {
   color: #333;
@@ -4670,7 +4675,7 @@ a.list-group-item .list-group-item-heading {
 a.list-group-item:hover,
 a.list-group-item:focus {
   text-decoration: none;
-  background-color: #f5f5f5;
+  /*background-color: #f5f5f5;*/
 }
 a.list-group-item.active,
 a.list-group-item.active:hover,
