--- a/views/layout.html
+++ b/views/layout.html
@@ -15,7 +15,7 @@
     <!-- Always force latest IE rendering engine
        (even in intranet) & Chrome Frame
        Remove this if you use the .htaccess -->
-       
+
     <meta charset="utf-8" />
 
     <!-- http://dev.w3.org/html5/markup/meta.name.html -->
@@ -44,9 +44,9 @@
        HTML5 elements & feature detects -->
   <script src="{{=URL('static','js/modernizr.custom.js')}}"></script>
 
-    <!-- jQuery -->    
+    <!-- jQuery -->
     <script type="text/javascript" charset="utf8" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    
+
   <!-- include stylesheets -->
     {{
         response.files.insert(0,URL('static','css/bootstrap.css'))
@@ -71,14 +71,14 @@
        uncomment to load jquery-ui //-->
   {{block head}}
   {{end}}
-  
+
   <!-- se agrega para hacer editables los GRID -->
 <!--  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript" charset="utf-8"></script> -->
   <script src="{{=URL('static','js/jeditable/jquery.jeditable.js')}}"></script>
 </head>
 
 <body>
-    
+
     <nav class="menu push-menu-left">
         <div class="panel panel-group" id="main">
             <div class="panel-body">
@@ -175,34 +175,39 @@
                                 <tbody>
                                     <tr>
                                         <td>
-                                            <a href="{{=URL('default','index2')}}">Wizard Empresa</a>
+                                            <a href="{{=URL('default','index2')}}" class="glyphicon glyphicon-compressed"> Wizard Empresa</a>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>
-                                            <a href="{{=URL('wizard_cat_cuentas','index')}}">Wizard Catalogo de Cuentas</a>
+                                            <a href="{{=URL('wizard_cat_cuentas','index')}}" class="glyphicon glyphicon-save"> Wizard Catalogo de Cuentas</a>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>
-                                            <a href="#" class="text-muted">Usuarios <span class="label label-muted">42</span></a>
+                                            <a href="{{=URL('permisos','index')}}" class="glyphicon glyphicon-user"> Usuarios <span class="label">1</span></a>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>
-                                            <a href="#" class="text-muted">Grupos</a>
+                                            <a href="{{=URL('permisos','grupos')}}" class="glyphicon glyphicon-briefcase"> Grupos</a>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>
-                                            <a href="#" class="text-muted">Permisos</a>
+                                            <a href="{{=URL('permisos','membresia')}}" class="glyphicon glyphicon-tags"> Membresía</a>
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>                                                        
-                                            <a href="#SubMenu1" class="text-muted" data-toggle="collapse" data-parent="#SubMenu1">Empresa <b class="caret"></b></a>
+                                        <td>
+                                            <a href="{{=URL('permisos','permisos')}}" class="glyphicon glyphicon-book"> Permisos</a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <a href="#SubMenu1"  data-toggle="collapse" data-parent="#SubMenu1">Empresa <b class="caret"></b></a>
                                                 <div class="collapse list-group-submenu" id="SubMenu1">
-                                                    <a href="{{=URL('empresa','listar')}}" class="list-group-item" data-parent="#SubMenu1">Sucursales</a>
+                                                    <a href="{{=URL('empresa','listar')}}" class="list-group-item text-muted" data-parent="#SubMenu1">Sucursales</a>
                                                     <a href="#" class="list-group-item text-muted" data-parent="#SubMenu1">Sucursales</a>
                                                     <a href="#" class="list-group-item text-muted" data-parent="#SubMenu1">Departamentos</a>
                                                 </div>
@@ -281,14 +286,14 @@
             </div>
         </div>
     </nav>
-    
+
     <div class="container-fluid">
     <div id="wrapper">
         <!-- BARRA DE NAVEGACION=========================================-->
             <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
                 <!-- El logotipo y el icono que despliega el menú se agrupan
                    para mostrarlos mejor en los dispositivos móviles -->
-                <div class="navbar-header">        
+                <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
                         <span class="sr-only">Desplegar navegación</span>
                         <span class="b-icon-bar"></span>
@@ -297,13 +302,13 @@
                     </button>
                     <button class="nav-toggler toggle-push-left navbar-brand" style="margin-top:0px; margin-bottom:0px;" >
                       <span class="glyphicon glyphicon-align-justify"></span>
-                    </button>                    
+                    </button>
                     <a class="navbar-brand" href="{{=URL('default','index')}}">General Ledger</a>
-                    
-                </div>     
+
+                </div>
                 <!-- Agrupar los enlaces de navegación, los formularios y cualquier
                    otro elemento que se pueda ocultar al minimizar la barra -->
-                <div class="collapse navbar-collapse navbar-ex1-collapse">    
+                <div class="collapse navbar-collapse navbar-ex1-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#">Ayuda</a></li>
                         <li class="dropdown">
@@ -322,7 +327,7 @@
                                 {{else:}}
                                     <li><a href="{{=URL('default','user')}}"><span class="glyphicon glyphicon-off"></span> Iniciar sesión</a></li>
                                 {{pass}}
-                                
+
                             </ul>
                         </li>
                     </ul>
@@ -360,15 +365,15 @@
       <script src="{{=URL('static','js/dd_belatedpng.js')}}"></script>
       <script> DD_belatedPNG.fix('img, .png_bg'); //fix any <img> or .png_bg background-images </script>
       <![endif]-->
-  
+
     {{if response.google_analytics_id:}}
     <script src="{{=URL('static','js/analytics.min.js')}}"></script>
     <script type="text/javascript">
     analytics.initialize({
-    'Google Analytics':{trackingId:'{{=response.google_analytics_id}}'} 
+    'Google Analytics':{trackingId:'{{=response.google_analytics_id}}'}
     });</script>
     {{pass}}
     <script src="{{=URL('static','js/share.js',vars=dict(static=URL('static','images')))}}"></script>
-   
+
 </body>
 </html>
